Clean up dead code, unused endpoints and stale docs
Remove what nothing uses and fix the bugs found on the way.

Bug fixes:
- deleting a source no longer deletes every opportunity that came from
  it; the projects are kept without a source
- projects with journal notes can be deleted (the notes' foreign key
  blocked it with a 409)
- two-factor authentication is enforced at password login: a correct
  password without a code gets a 401 challenge and the login page asks
  for the authenticator code
- the profile "Delete account" button did nothing and called a
  non-existent endpoint; removed with the backend soft-delete endpoint
- /clients/new and /contacts/new showed a blank page; every create page
  now uses /new
- the user-management service no longer calls /users/profile on
  construction

Backend:
- drop about 30 endpoints the app never calls (search and filter
  variants, stats, with-* projections, step shortcuts, freelance
  create/delete/by-email, session termination) with their service and
  repository methods and tests
- remove the never-used session and security-question entities, the
  unconfigured OAuth social login client and commons-io
- rewrite controllers in one compact style without per-controller CORS
  or response boilerplate

Frontend:
- remove unused dialogs, the six-component filter panel stack (sources
  now use the same inline filters as other lists), legacy service
  aliases, unused methods, models and 223 unused translation keys
- share one form error helper, replace six HTTP service specs with one
  table-driven spec and drop unused npm packages

Docs describe the app as it is: filters, deletion rules, two-factor
login, account data, test maps and the README summary.